# src/controller/ApplicationController.ts
@@ -7,6 +7,7 @@ import {
   Route,
   Tags,
   Body,
+  Security,
   Path,
   SuccessResponse,
 } from "tsoa";
@@ -25,16 +26,19 @@ export class ApplicationDocController {
     return ApplicationDocService.create(body);
   }
 
+  @Security("jwt", ["SUPER_ADMIN", "ADMIN"])
   @Get("/")
   public async getAll() {
     return ApplicationDocService.getAll();
   }
 
+  @Security("jwt", ["SUPER_ADMIN", "ADMIN"])
   @Get("/{id}")
   public async getById(@Path() id: number) {
     return ApplicationDocService.getById(id);
   }
 
+  @Security("jwt", ["SUPER_ADMIN", "ADMIN"])
   @Put("/{id}")
   public async update(
     @Path() id: number,
@@ -43,6 +47,7 @@ export class ApplicationDocController {
     return ApplicationDocService.update(id, body);
   }
 
+  @Security("jwt", ["SUPER_ADMIN", "ADMIN"])
   @Patch("/{id}/status")
   public async updateStatus(
     @Path() id: number,
@@ -51,6 +56,7 @@ export class ApplicationDocController {
     return ApplicationDocService.updateStatus(id, body.status);
   }
 
+  @Security("jwt", ["SUPER_ADMIN", "ADMIN"])
   @Delete("/{id}")
   public async delete(@Path() id: number) {
     return ApplicationDocService.delete(id);
