# src/controller/EgovController.ts
@@ -8,6 +8,7 @@ import {
   Tags,
   Body,
   Path,
+  Security,
   SuccessResponse,
 } from "tsoa";
 import { EGovService } from "../services/Egov";
@@ -22,21 +23,26 @@ export class EGovController {
     return EGovService.create(body);
   }
 
+  @Security("jwt", ["SUPER_ADMIN", "ADMIN"])
   @Get("/")
+  
   public async getAll() {
     return EGovService.getAll();
   }
 
+  @Security("jwt", ["SUPER_ADMIN", "ADMIN"])
   @Get("/{id}")
   public async getById(@Path() id: number) {
     return EGovService.getById(id);
   }
 
+  @Security("jwt", ["SUPER_ADMIN", "ADMIN"])
   @Put("/{id}")
   public async update(@Path() id: number, @Body() body: UpdateEGovRequest) {
     return EGovService.update(id, body);
   }
 
+  @Security("jwt", ["SUPER_ADMIN", "ADMIN"])
   @Patch("/{id}/status")
   public async updateStatus(
     @Path() id: number,
@@ -45,6 +51,7 @@ export class EGovController {
     return EGovService.updateStatus(id, body.status);
   }
 
+  @Security("jwt", ["SUPER_ADMIN", "ADMIN"])
   @Delete("/{id}")
   public async delete(@Path() id: number) {
     return EGovService.delete(id);
