# src/controller/LegalController.ts
@@ -8,6 +8,7 @@ import {
   Tags,
   Body,
   Path,
+  Security,
   SuccessResponse,
 } from "tsoa";
 import { LegalOfficialService } from "../services/legal";
@@ -25,16 +26,19 @@ export class LegalOfficialController {
     return LegalOfficialService.create(body);
   }
 
+  @Security("jwt", ["SUPER_ADMIN", "ADMIN"])
   @Get("/")
   public async getAll() {
     return LegalOfficialService.getAll();
   }
 
+  @Security("jwt", ["SUPER_ADMIN", "ADMIN"])
   @Get("/{id}")
   public async getById(@Path() id: number) {
     return LegalOfficialService.getById(id);
   }
 
+  @Security("jwt", ["SUPER_ADMIN", "ADMIN"])
   @Put("/{id}")
   public async update(
     @Path() id: number,
@@ -43,6 +47,7 @@ export class LegalOfficialController {
     return LegalOfficialService.update(id, body);
   }
 
+  @Security("jwt", ["SUPER_ADMIN", "ADMIN"])
   @Patch("/{id}/status")
   public async updateStatus(
     @Path() id: number,
@@ -51,6 +56,7 @@ export class LegalOfficialController {
     return LegalOfficialService.updateStatus(id, body.status);
   }
 
+  @Security("jwt", ["SUPER_ADMIN", "ADMIN"])
   @Delete("/{id}")
   public async delete(@Path() id: number) {
     return LegalOfficialService.delete(id);
